samples/_failures_safe/1761466898_0b0e52_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1dfc144e.c: In function ‘main’:
./samples/SAFE/__tmp_1dfc144e.c:166:9: error: expected expression at end of input
  166 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_1dfc144e.c:166:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1dfc144e.c:166:9: error: expected declaration or statement at end of input
